# eka-ci

./: .gitignore  DESIGN.md  README.md  flake.nix
.github/workflows/: backend.yml  docs.yml  nix.yml  rust.yml
backend/client/: test.nix
backend/server/: Cargo.toml
backend/server/sql/migrations/: 20250420_drv_build.sql  20250426_drv.sql  20250426_drv_eval.sql  20250519_file_eval.sql  20251108_github.sql  20251214_approved_users.sql  20251215_authenticated_users.sql  20251222_github_installations.sql  20260101_push_command.sql  20260212_checks.sql  20260311_github_installations.sql  20260409_job_config.sql  20260411_attr_path_maintainers.sql  20260412_build_output_sizes.sql  20260413_pull_requests.sql  20260414_merge_queue_support.sql  20260415_attr_path_maintainer_requests.sql  20260416_build_closure_sizes.sql  20260417_pr_auto_merge.sql  20260418_outputs_and_runtime_refs.sql  20260419_pr_comment_merge.sql  20260424_drv_package_metadata.sql  20260425_rebuild_impact_cache.sql  20260426_rebuild_impact_full_flag.sql
backend/server/src/: cache_permissions.rs  client.rs  config.rs  db.rs  dependency_comparison.rs  github_permissions.rs  lib.rs  main.rs  metrics.rs  path_safety.rs  secret.rs  web.rs  webhook_security.rs
backend/server/src/auth/: admin.rs  github_api.rs  jwt.rs  middleware.rs  mod.rs  oauth.rs  profile.rs  requests.rs  types.rs
backend/server/src/change_summary/: cache.rs  classify.rs  impact.rs  mod.rs  render.rs  types.rs
backend/server/src/checks/: executor.rs  mod.rs  service.rs  types.rs
backend/server/src/ci/: config.rs  flake.rs  mod.rs
backend/server/src/config/: remote_builder.rs
backend/server/src/db/: approved_users.rs  checks.rs  github.rs  github_installations.rs  hooks.rs  insert.rs  installations.rs  maintainers.rs  mod.rs  model.rs  runtime_refs.rs  service.rs  size.rs
backend/server/src/db/drvs/: insert.rs
backend/server/src/db/model/: build.rs  build_event.rs  drv.rs  drv_id.rs  eval.rs  git.rs
backend/server/src/db/model/drv/: mod.rs  queries.rs
backend/server/src/git/: actions.rs  mod.rs  types.rs
backend/server/src/github/: mod.rs  service.rs
backend/server/src/github/service/: actions.rs  types.rs
backend/server/src/github/webhook/: comment_command.rs  mod.rs
backend/server/src/graph/: eviction.rs  graph.rs  mod.rs  service.rs
backend/server/src/hooks/: executor.rs  mod.rs  types.rs
backend/server/src/nix/: derivation_show.rs  jobs.rs  mod.rs  nix_eval_jobs.rs  size.rs
backend/server/src/scheduler/: build.rs  builder.rs  ingress.rs  mod.rs  recorder.rs  service.rs
backend/server/src/services/: async_service.rs  checks.rs  mod.rs  websocket.rs
backend/server/src/services/websocket/: events.rs  subscription.rs
backend/server/src/tests/: fod_attrs.json  legacy_attrs.json  mod.rs  structured_attrs.json
backend/server/tests/: http_integration.rs  service_integration.rs
backend/server/tests/common/: mod.rs
docs/: .gitignore  ARCHITECTURE.md  SUMMARY.md  book.toml  change-summaries.md  configure-caches.md  github-app-setup.md  installation.md  introduction.md  lru-cache-tuning.md  monitoring.md  nixos-module.md  post-build-hooks.md  pr-commands.md  quick-start.md  rebuild-detection.md  repository-configuration.md  server-configuration.md
examples/checks_example/: README.md  example.nix  flake.nix  shell.nix
examples/simple_job/: stdenv.nix
frontend/: Makefile
frontend/src/: Auth.elm  Main.elm  Ports.elm  Route.elm
frontend/static/: index.html
nix/: dev-server.nix  dev-shell.nix  eka-ci.nix  module-test.nix  module.nix  option-docs.nix  web-up.nix
(+34 files in other folders)
