[package]
name = "eka_ci_server"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
description = "Continuous Integration server for Nix"
repository = "https://github.com/ekala-project/eka-ci"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = { version = "0.8.3", features = ["tokio", "tracing", "json"] }
birdcage = "0.8.1"
bstr = "1.12.0"
chrono = { version = "0.4.40", default-features = false, features = ["now", "std"] }
clap = { workspace = true }
envy = "0.4.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
gix-hash = "0.17.0"
gix-url = "0.30.0"
http = "1.3.1"
lru = "0.16.2"
jsonwebtoken = "9.3.0"
oauth2 = "4.4"
octocrab = { version = "0.41.2", features = [ "stream" ] }
reqwest = { version = "0.12", features = ["json"] }
prometheus = { version = "0.13", features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { version = "0.8.5", features = [ "runtime-tokio", "sqlite", "migrate", "macros", "chrono" ], default-features = false }
tempfile = "3.14"
thiserror = { workspace = true }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.2", features = ["fs", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xdg = { workspace = true }
openssl = { version = "0.10.75", features = ["vendored"] }
